main.tf
# Configuring the provider 
provider "aws" {
  region = "us-east-1"
  access_key = var.access_key
  secret_key = var.secret_access_key
}
 

# Create VPC
resource "aws_vpc" "project_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags = {
    Name = "project_vpc"
  }
}

# Create Internet Gateway
resource "aws_internet_gateway" "project_internet_gateway" {
  vpc_id = aws_vpc.project_vpc.id
  tags = {
    Name = "project_internet_gateway"
  }

}

# Create Route Tables
resource "aws_route_table" "project-route-table-public" {
  vpc_id = aws_vpc.project_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.project_internet_gateway.id
  }
  tags = {
    Name = "project-route-table-public"
  }
}

# Create Public subnet-1
resource "aws_subnet" "subnet-1" {
  vpc_id     = aws_vpc.project_vpc.id
  cidr_block = "10.0.2.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "subnet-1"
  }
}
# Create Public Subnet-2
resource "aws_subnet" "subnet-2" {
  vpc_id     = aws_vpc.project_vpc.id
  cidr_block = "10.0.3.0/24"
  availability_zone = "us-east-1b"
  map_public_ip_on_launch = true

  tags = {
    Name = "subnet-2"
  }
}
# Associate subnet1 with route table 
resource "aws_route_table_association" "project-public-subnet1-association" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.project-route-table-public.id
}
# Associate subnet2 with  route table
resource "aws_route_table_association" "project-public-subnet2-association" {
  subnet_id      = aws_subnet.subnet-2.id
  route_table_id = aws_route_table.project-route-table-public.id
}

# Create Networkacl
resource "aws_network_acl" "project-network_acl" {
  vpc_id     = aws_vpc.project_vpc.id
  subnet_ids = [aws_subnet.subnet-1.id, aws_subnet.subnet-2.id]

ingress {
    rule_no    = 100
    protocol   = "-1"
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }
egress {
    rule_no    = 100
    protocol   = "-1"
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }
}

# create seurity group for the load balancer
resource "aws_security_group" "project-load_balancer_sg" {
  name        = "project-load-balancer-sg"
  description = "Security group for the load balancer"
  vpc_id      = aws_vpc.project_vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    
  }
  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
# security group for instances 
resource "aws_security_group" "project-security-grp-rule" {
  name        = "allow_ssh_http_https"
  description = "Allow SSH, HTTP and HTTPS inbound traffic for private instances"
  vpc_id      = aws_vpc.project_vpc.id
 ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_groups = [aws_security_group.project-load_balancer_sg.id]
  }
 ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_groups = [aws_security_group.project-load_balancer_sg.id]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
   
  }
  tags = {
    Name = "Altschool-security-grp-rule"
  }
}

# Creating Instances 
resource "aws_instance" "server1" {
  ami             = "ami-00874d747dde814fa"
  instance_type   = "t2.micro"
  key_name        = "New-keys"
  security_groups = [aws_security_group.project-security-grp-rule.id]
  subnet_id       = aws_subnet.subnet-1.id
  availability_zone = "us-east-1a"
  tags = {
    Name   = "server-1"
    source = "terraform"
  }
}
# creating instance 2
 resource "aws_instance" "server2" {
  ami             = "ami-00874d747dde814fa"
  instance_type   = "t2.micro"
  key_name        = "New-keys"
  security_groups = [aws_security_group.project-security-grp-rule.id]
  subnet_id       = aws_subnet.subnet-2.id
  availability_zone = "us-east-1b"
  tags = {
    Name   = "server-2"
    source = "terraform"
  }
}
# creating instance 3
resource "aws_instance" "server3" {
  ami             = "ami-00874d747dde814fa"
  instance_type   = "t2.micro"
  key_name        = "New-keys"
  security_groups = [aws_security_group.project-security-grp-rule.id]
  subnet_id       = aws_subnet.subnet-1.id
  availability_zone = "us-east-1a"
  tags = {
    Name   = "server-3"
    source = "terraform"
  }
} 

# Storing IP addresses
resource "local_file" "host-inventory" {
  filename = "mkdir /home/Terraform project/host-inventory"
  content  = <<EOT
${aws_instance.server1.public_ip}
${aws_instance.server2.public_ip}
${aws_instance.server3.public_ip}
  EOT
}

# Application loab balancer
resource "aws_lb" "project-load-balancer" {
  name               = "project-load-balancer"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.project-load_balancer_sg.id]
  subnets            = [aws_subnet.subnet-1.id, aws_subnet.subnet-2.id]
  #enable_cross_zone_load_balancing = true
  enable_deletion_protection = false
  depends_on                 = [aws_instance.server1, aws_instance.server2, aws_instance.server3]
}

# Create target group 
resource "aws_lb_target_group" "project-target-group" {
  name     = "project-target-group"
  target_type = "instance"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.project_vpc.id
  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 15
    timeout             = 3
    healthy_threshold   = 3
    unhealthy_threshold = 3
  }
}

# Create listener
resource "aws_lb_listener" "project-listener" {
  load_balancer_arn = aws_lb.project-load-balancer.arn
  port              = "80"
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.project-target-group.arn
  }
}
# Create the listener rule
resource "aws_lb_listener_rule" "project-listener-rule" {
  listener_arn = aws_lb_listener.project-listener.arn
  priority     = 1
  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.project-target-group.arn
  }
  condition {
    path_pattern {
      values = ["/"]
    }
  }
}

# Attach target group to load balancer 
resource "aws_lb_target_group_attachment" "project-target-group-attachment1" {
  target_group_arn = aws_lb_target_group.project-target-group.arn
  target_id        = aws_instance.server1.id
  port             = 80
}
 
resource "aws_lb_target_group_attachment" "project-target-group-attachment2" {
  target_group_arn = aws_lb_target_group.project-target-group.arn
  target_id        = aws_instance.server2.id
  port             = 80
}
resource "aws_lb_target_group_attachment" "project-target-group-attachment3" {
  target_group_arn = aws_lb_target_group.project-target-group.arn
  target_id        = aws_instance.server3.id
  port             = 80 
  
  }

  # Create route 53
  # get hosted zone 
resource "aws_route53_zone" "hosted_zone" {
  name = var.domain_name
  tags = {
    Environment = "dev"
  }
}
# create a record set in route 53
resource "aws_route53_record" "site_domain" {
  zone_id = aws_route53_zone.hosted_zone.zone_id
  name    = "terraform-test.${var.domain_name}"
  type    = "A"
  alias {
    name                   = aws_lb.project-load-balancer.dns_name
    zone_id                = aws_lb.project-load-balancer.zone_id
    evaluate_target_health = true
  }
}
